# electrai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: gen-expected.yml  gpu-benchmark.yml  gpu-e2e.yml  tests.yaml
data/MP/: README.md
data/MP/chgcars/: README.md
data/MP/chgcars/input/: mp-1775579.CHGCAR  mp-1828106.CHGCAR  mp-1828986.CHGCAR  mp-1887555.CHGCAR  mp-1924667.CHGCAR  mp-2367080.CHGCAR  mp-2411562.CHGCAR  mp-2493198.CHGCAR  mp-2680643.CHGCAR  mp-2709708.CHGCAR
data/MP/data/grid_half/: mp-1796244.CHGCAR  mp-1877473.CHGCAR  mp-2280689.CHGCAR  mp-2351888.CHGCAR  mp-2352703.CHGCAR  mp-2356825.CHGCAR  mp-2360977.CHGCAR  mp-2365125.CHGCAR  mp-2365327.CHGCAR  mp-2373389.CHGCAR  mp-2373414.CHGCAR  mp-2373428.CHGCAR  mp-2375532.CHGCAR  mp-2375652.CHGCAR  mp-2375672.CHGCAR  mp-2375705.CHGCAR  mp-2377558.CHGCAR  mp-2377630.CHGCAR  mp-2390106.CHGCAR  mp-2390336.CHGCAR  mp-2415984.CHGCAR  mp-2416349.CHGCAR  mp-2416437.CHGCAR  mp-2423976.CHGCAR  mp-2456484.CHGCAR  mp-2456488.CHGCAR  mp-2458922.CHGCAR  mp-2458987.CHGCAR  mp-2490830.CHGCAR  mp-2513632.CHGCAR  mp-2513807.CHGCAR  mp-2518136.CHGCAR  mp-2518165.CHGCAR  mp-2518168.CHGCAR  mp-2629333.CHGCAR  mp-2679068.CHGCAR  mp-2706343.CHGCAR
data/MP/label/grid_half/: mp-1796244.CHGCAR  mp-1926274.CHGCAR  mp-2280689.CHGCAR  mp-2300242.CHGCAR  mp-2351888.CHGCAR  mp-2352703.CHGCAR  mp-2356825.CHGCAR  mp-2360977.CHGCAR  mp-2365125.CHGCAR  mp-2365327.CHGCAR  mp-2373389.CHGCAR  mp-2373414.CHGCAR  mp-2373428.CHGCAR  mp-2375532.CHGCAR  mp-2375652.CHGCAR  mp-2375672.CHGCAR  mp-2375705.CHGCAR  mp-2388330.CHGCAR  mp-2390106.CHGCAR  mp-2390336.CHGCAR  mp-2415984.CHGCAR  mp-2423976.CHGCAR  mp-2424020.CHGCAR  mp-2456484.CHGCAR  mp-2456488.CHGCAR  mp-2458922.CHGCAR  mp-2458987.CHGCAR  mp-2490830.CHGCAR  mp-2513632.CHGCAR  mp-2513807.CHGCAR  mp-2629333.CHGCAR  mp-2679068.CHGCAR  mp-2706343.CHGCAR
data/MP/map/: script.py
data/MP/s3_download/: download_from_s3.py
docs/: index.md
examples/MP/: run.sh
src/electrai/: __init__.py  chk.pth  lightning.py  requirements.txt
src/electrai/configs/: config.yaml  config_zarr.yaml
src/electrai/configs/MP/: config.yaml  config_resnet.yaml  config_resunet.yaml
src/electrai/configs/QM9/: config.yaml
src/electrai/data/MP/SAD/: generate_SAD.py
src/electrai/data/MP/chgcars/: script.py
src/electrai/data/MP/map/: script.py
src/electrai/data/MP/s3_download/: README.md  download_from_s3.py  requirements.txt
src/electrai/dataloader/: README.md  README_ZARR.md  __init__.py  chgcar_read.py  collate.py  dataset.py  mp.py  mp_zarr_s3_data.py  qm9.py  registry.py  split.py  utils.py
src/electrai/entrypoints/: main.py  test.py  train.py
src/electrai/examples/: config.yaml
src/electrai/loggers/: training.py
src/electrai/model/: resunet.py  srgan_layernorm_pbc.py
src/electrai/model/loss/: charge.py
src/electrai/models/: srgan_layernorm_pbc.py
src/electrai/scripts/: train.py
src/electrai/zarr_conversion/: README.md  convert_to_zarr.py  zarr_writer.py
src/resenet_density/: LICENSE  README.md
src/resenet_density/data/MT/Compacted/scripts/: scanner_22.py  scanner_atomh1e_22.py
src/resenet_density/data/MT/Compacted/seed/restarts/inter-1996.restart/: centered.xyz  run.out
src/resenet_density/data/MT/Compacted/seed/restarts/inter-2980.restart/: centered.xyz  run.out
src/resenet_density/data/QM9/pbe/szv50_tzvp200_smallerbox/results/dsgdb9nsd_000001/: box.npy  centered.xyz  rho_22.npy
src/resenet_density/data/QM9/pbe/szv50_tzvp200_smallerbox/results/dsgdb9nsd_000002/: dm_22 2.npy  rho_22.npy
src/resenet_density/data/QM9/pbe/szv50_tzvp200_smallerbox/results/dsgdb9nsd_036784/: dm_22.npy
src/resenet_density/data/QM9/pbe/szv50_tzvp200_smallerbox/results/dsgdb9nsd_107770/: dm_22 3.npy
src/resenet_density/data/QM9/pbe/szv50_tzvp200_smallerbox/scripts/: scanner_22.py
src/resenet_density/data/QM9/pbe/tzvp200_atomh1e2_smallerbox/: run.sh
src/resenet_density/data/QM9/pbe/tzvp200_atomh1e2_smallerbox/scripts/: scanner_22.py
src/resenet_density/data/QM9/pbe/tzvp200_atomh1e_smallerbox/scripts/: scanner_22.py
src/resenet_density/data/c7o2h10_md_every100/pbe/tzvp200_atomh1e_smallerbox/1000/: 1_centered.xyz
src/resenet_density/data/c7o2h10_md_every100/pbe/tzvp200_smallerbox/1000/: 0_centered.xyz
src/resenet_density/examples/predict/: predict.py  run.out  run.sh
src/resenet_density/examples/predict/lists/: list_d  list_dgs  list_l  list_lgs
src/resenet_density/examples/train/: run.out  run.sh  train.py
src/resenet_density/examples/train/lists/: list_d  list_dgs  list_l  list_lgs
tests/: README.md  __init__.py
tests/electrai/dataloader/: test_mp_zarr_s3_data.py
tests/electrai/model/: test_srgan_layernorm_pbc.py
tests/electrai/zarr_conversion/: test_convert_to_zarr.py
tests/examples/: test_sample.py
(+9 files in other folders)
