[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "electrai"
description="A Python package description goes here."
version = "0.0.1"
readme = "README.md"
license = { text = "BSD-3" }
authors = [{ name = "YourName", email = "YourName@email.com" }]
keywords = ["MyKeyword1", "MyKeyword2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.11"
dependencies = [
    "numpy~=2.3.3",
    "scikit-learn>=1.7.2",
    "torch~=2.9.1",
    "torchvision>=0.24.0",
    "lightning~= 2.5.6",
    "wandb>=0.12.10",
    "pyyaml>=6.0.3",
    "pymatgen>=2025.10.7",
    "zarr>=3.1.3",
    "hydra-core>=1.3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.2", "pytest-cov>=3.0.0", "ruff>=0.0.285"]
docs = [
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.1"
]
zarr_conversion = [
    "fire>=0.5.0",
    "numcodecs>=0.16.3",
    "pymatgen>=2025.10.7",
    "s3fs>=2024.5.0",
    "zarr>=3.1.3",
]

[project.urls]
repository = "https://github.com/Quantum-Accelerators/electrai"
documentation = "https://quantum-accelerators.github.io/electrai/"
changelog = "https://github.com/Quantum-Accelerators/electrai/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
electrai = ["py.typed"]

[tool.pyright]
include = ["electrai"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-p no:warnings", "--import-mode=importlib"]
xfail_strict = true
log_cli_level = "warn"
pythonpath = "src"
testpaths = ["tests"]

[tool.black]
exclude = '''
/(
    \.git
  | \.tox
)/
'''
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
skip_gitignore = true

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "except ImportError",
]

[tool.ruff]
lint.select = [
  "A",      # flake8-builtins
  "ARG",    # flake8-unused-arguments
  "ASYNC",  # flake8-async
  "ASYNC1", # flake8-async1
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "E",      # pycodestyle error
  "EXE",    # flake8-executable
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "INT",    # flake8-gettext
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # numpy-specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T20",    # flake8-print
  "TCH",    # flake8-type-checking
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # pycodestyle warning
  "YTT",    # flake8-2020
]
lint.ignore = [
  "E501",   # Line too long
  "ISC001",   # single-line-implicit-string-concatenation
  "PLR",    # Design related pylint codes
  "PERF203",  # try-except-in-loop
  "RET505", # Unnecessary `elif` after `return`
  "PLC0415", # `import` should be at the top-level of a file
]
lint.unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
lint.pydocstyle.convention = "numpy"
lint.isort.known-first-party = ["electrai"]
lint.isort.required-imports = ["from __future__ import annotations"]
lint.isort.split-on-trailing-comma=false
src = ["src"]
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ANN", "ARG", "D", "E402", "PTH", "S101"]
"src/resenet_density/**" = ["E722", "E741", "F403", "F405", "F841", "E741", "PD901", "PLW2901", "PTH123", "SIM115", "T201"]

[tool.docformatter]
pre-summary-newline = true
black = true

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
no_implicit_optional = false
disable_error_code = "annotation-unchecked"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=3.0.0",
    "ruff>=0.0.285",
]
